# lightweight_task_scheduler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  index.html
.devcontainer/: Dockerfile  devcontainer.json
example/src/: example_error_handling.c  example_one_time_task.c  example_periodic_task.c  example_stop_scheduler.c  example_stop_task.c  platform_time.c
lib/include/: platform_time.h  platform_types.h  scheduler.h  scheduler_config.h
lib/src/: scheduler.c
tests/: test_scheduler.c
